# bonus_alg

./: CMakeLists.txt  README.md  conanfile.txt  runner.py
src/: Solver.cpp  Solver.h  main.cpp
src/algorithm/: BFFSolver.cpp  BFFSolver.h  BonSolver.cpp  BonSolver.h  BonusSolver.cpp  BonusSolver.h
